--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,3 +24,23 @@ h4{
 a{
     color: aquamarine;
 }
+/*section 1*/
+
+h2{
+    display: block;
+    color:white;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+p{
+    color: gray;
+    font-size: 21px;
+}
+
+/*footer*/
+
+footer{
+    text-align: right;
+    color: gray;
+}
